--- a/todo_list/src/styles.css
+++ b/todo_list/src/styles.css
@@ -1,11 +1,11 @@
 .todo-list-wrapper {
   text-align: left;
-  max-width: 30vw;
+  max-width: 25vw;
 }
 
 @media only screen and (max-width: 1175px) {
   .todo-list-wrapper {
-    max-width: 90vw;
+    max-width: 75vw;
   }
 }
 
